--- a/src/grid.css
+++ b/src/grid.css
@@ -1,3 +1,11 @@
+/**
+ * grid.less
+ * --------------------------------------------------------
+ * license: GNU GENERAL PUBLIC LICENSE Version 2, June 1991.
+ * author: Mient-jan Stelling <mientjan.stelling@gmail.com>
+ * copyright: Copyright (c) 2013 Mient-jan Stelling
+ * requires: less 1.4 >
+ */
 .grid {
   position: relative;
   width: 200px;
