--- a/src/grid.less
+++ b/src/grid.less
@@ -1,3 +1,12 @@
+
+/**
+ * grid.less
+ * --------------------------------------------------------
+ * license: GNU GENERAL PUBLIC LICENSE Version 2, June 1991.
+ * author: Mient-jan Stelling <mientjan.stelling@gmail.com>
+ * copyright: Copyright (c) 2013 Mient-jan Stelling
+ * requires: less 1.4 >
+ */
 .grid(@name: 'grid', @width, @height, @x, @y, @margin: 0){
 
 	@minGrid: (1/2)*((@x + @y) - sqrt(pow(@x - @y,2)));
