--- a/example/example.less
+++ b/example/example.less
@@ -1,2 +1,54 @@
 @import "../src/grid.less";
-.grid(grid, 200px, 200px, 4, 4, 5px);
+
+	.grid(grid, 200px, 200px, 4, 4, 5px)
+
+;
+
+// styling
+
+html, body {
+	width: 100%;
+	height: 100%;
+
+	margin: 0;
+	padding: 0;
+
+}
+
+.grid {
+	margin: 10px;
+	float: left;
+	
+	div {
+		-moz-box-shadow: inset 0px 1px 0px 0px #BBDAF7;
+		-webkit-box-shadow: inset 0px 1px 0px 0px #BBDAF7;
+		box-shadow: inset 0px 1px 0px 0px #BBDAF7;
+		background-color: #79BBFF;
+		-webkit-border-top-left-radius: 6px;
+		-moz-border-radius-topleft: 6px;
+		border-top-left-radius: 6px;
+		-webkit-border-top-right-radius: 6px;
+		-moz-border-radius-topright: 6px;
+		border-top-right-radius: 6px;
+		-webkit-border-bottom-right-radius: 6px;
+		-moz-border-radius-bottomright: 6px;
+		border-bottom-right-radius: 6px;
+		-webkit-border-bottom-left-radius: 6px;
+		-moz-border-radius-bottomleft: 6px;
+		border-bottom-left-radius: 6px;
+		text-indent: 0;
+		border: 1px solid #84BBF3;
+		display: inline-block;
+		color: #FFFFFF;
+		font-family: Arial;
+		font-size: 15px;
+		font-weight: bold;
+		font-style: normal;
+		height: 50px;
+		line-height: 50px;
+		width: 86px;
+		text-decoration: none;
+		text-align: center;
+		text-shadow: 1px 1px 0px #528ECC;
+	}
+}
