--- a/example/example.less
+++ b/example/example.less
@@ -1,8 +1,7 @@
 @import "../src/grid.less";
 
-	.grid(grid, 200px, 200px, 4, 4, 5px)
-
-;
+.grid(grid, 200px, 200px, 4, 4, 5px);
+.grid(grid-procents, 100%, 100%, 4, 4, 5%);
 
 // styling
 
