--- a/example/example.less
+++ b/example/example.less
@@ -1,7 +1,7 @@
 @import "../src/grid.less";
 
-.grid(grid, 200px, 200px, 4, 4, 5px);
-.grid(grid-procents, 100%, 100%, 4, 4, 5%);
+.grid(grid, 200px, 200px, 4, 4, 5px, true);
+.grid(grid-procents, 100%, 100%, 4, 4, 5%, true);
 
 // styling
 
