--- a/src/grid.less
+++ b/src/grid.less
@@ -7,7 +7,7 @@
  * copyright: Copyright (c) 2013 Mient-jan Stelling
  * requires: less 1.4 >
  */
-.grid(@name: 'grid', @width, @height, @x, @y, @margin: 0){
+.grid(@name: 'grid', @width, @height, @x, @y, @margin: 0, @useFloat: false){
 
 	@minGrid: (1/2)*((@x + @y) - sqrt(pow(@x - @y,2)));
 	@maxGrid: (1/2)*((@x + @y) + sqrt(pow(@x - @y,2)));
@@ -59,7 +59,8 @@
 		@ymod: floor(@index2 / @x);
 		@xmod: mod(@index2,@x);
 
-		.fl-l:nth-child(@{index}) {
+		.fl-l:nth-child(@{index}),
+		.fl-l.i@{index} {
 			z-index: @index;
 			margin: @xmod;
 			padding: @ymod;
@@ -74,20 +75,22 @@
 		@ymod: floor(@index2 / @x);
 		@xmod: mod(@index2,@x);
 
-		.fl-r:nth-child(@{index}) {
+		.fl-r:nth-child(@{index}),
+		.fl-r.i@{index}
+		{
 			top: @blockHeight * @ymod + (@margin * @ymod);
 			right: @blockHeight * @xmod + (@margin * @xmod);
 		}
 		.fl-r(@index - 1);
 	}
 
-
 	.fl-y (@index) when (@index > 0) {
 		@index2: @index - 1;
 		@ymod: mod(@index2,@y);
 		@xmod: floor(@index2 / @y);
 
-		.fl-y:nth-child(@{index}) {
+		.fl-y:nth-child(@{index}),
+		.fl-y.i@{index} {
 			top: @blockHeight * @ymod + (@margin * @ymod);
 			left: @blockHeight * @xmod + (@margin * @xmod);
 		}
@@ -114,12 +117,16 @@
 		.x(@x - 1);
 		.y(@y - 1);
 
-		.fl-l { position: absolute; }
-		.fl-r { position: absolute; }
-		.fl-y { position: absolute; }
-		.fl-l(@y * @x);
-		.fl-r(@y * @x);
-		.fl-y(@y * @x);
+		.float(@useFloat) when (@useFloat = true){
+			.fl-l { position: absolute; }
+			.fl-r { position: absolute; }
+			.fl-y { position: absolute; }
+			.fl-l(@y * @x);
+			.fl-r(@y * @x);
+			.fl-y(@y * @x);
+		}
+
+		.float(@useFloat);
 
 	}
 }
